examples/c/error-codes/violates-constraint/fatal/CV-TEAS1-bad-static.output
CV-TEAS1-bad-static.c:10:7: error: Incompatible types in assignment.

    Constraint violation (CV-TEAS1):
        see C11 section 6.5.16.1:1 http://rvdoc.org/C11/6.5.16.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
kcc -d CV-TEAS1-bad-static.c
